# workflow-orchestration-queue-golf43

./: .ai-repository-summary.md  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_opencode_prompt.sh  test-results-pester.xml
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml
docs/debrief-and-document/: project-setup-debrief.md  trace.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/workflow_orchestration_queue/: __init__.py  config.py  main.py
src/workflow_orchestration_queue/interfaces/: __init__.py  task_queue.py
src/workflow_orchestration_queue/models/: __init__.py  work_item.py
src/workflow_orchestration_queue/notifier/: __init__.py  triage.py  webhook.py
src/workflow_orchestration_queue/queue/: __init__.py  github_queue.py
src/workflow_orchestration_queue/sentinel/: __init__.py  dispatcher.py  poller.py  status.py
src/workflow_orchestration_queue/utils/: __init__.py  auth.py  secrets.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_github_queue.py  test_poller.py  test_webhook.py  test_work_item.py
